<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/radio_ui_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">



    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/choice_1_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/choiceOne"
            android:textColor="@color/cardview_dark_background"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/choice_2_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/choiceTwo"
            android:textColor="@color/cardview_dark_background"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/choice_3_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/choiceThree"
            android:textColor="@color/cardview_dark_background"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/choice_4_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/choiceFour"
            android:textColor="@color/cardview_dark_background"
            android:textSize="28sp" />

    </RadioGroup>


    <Button
        android:id="@+id/answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="25sp"
        android:text="@string/submit"/>


</LinearLayout>